# basic-intro-Bayes-infer

./: README.md  chap1_probability_distribution.ipynb  chap2_commonly_used_probability_distribution.ipynb  chap4_first_tutorial_bayes_infer.ipynb  pyproject.toml  sect5_1_bayes_infer_data_distribution.ipynb  sect5_2_bayes_infer_linear_regression.ipynb
